[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/assets/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://src/actors/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Objects/portal/portal.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/assets/—Pngtree—retro light sign arrow_6496806.png" type="Texture" id=4]
[ext_resource path="res://src/levels/tutorial.gd" type="Script" id=5]
[ext_resource path="res://src/music/Chillix.mp3" type="AudioStream" id=6]

[node name="Tutorial" type="Node2D"]
position = Vector2( 1153, 94 )
script = ExtResource( 5 )

[node name="TileMap3" type="TileMap" parent="."]
visible = false
light_mask = 3
tile_set = ExtResource( 1 )
cell_size = Vector2( 80, 80 )
format = 1
tile_data = PoolIntArray( -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -524273, 0, 0, -524272, 0, 0, -524271, 0, 0, -524270, 0, 0, -524269, 0, 0, -524268, 0, 0, -524267, 0, 0, -524266, 0, 0, -524265, 0, 0, -524264, 0, 0, -524263, 0, 0, -524262, 0, 0, -524261, 0, 0, -524260, 0, 0, -524259, 0, 0, -524258, 0, 0, -524257, 0, 0, -524256, 0, 0, -524255, 0, 0, -524254, 0, 0, -524253, 0, 0, -524252, 0, 0, -524251, 0, 0, -524250, 0, 0, -524249, 0, 0, -524248, 0, 0, -524247, 0, 0, -524246, 0, 0, -524245, 0, 0, -524244, 0, 0, -524243, 0, 0, -393221, 0, 0, -458707, 0, 0, -327685, 0, 0, -393171, 0, 0, -262149, 0, 0, -327635, 0, 0, -196613, 0, 0, -262099, 0, 0, -131077, 0, 0, -196563, 0, 0, -65541, 0, 0, -131027, 0, 0, -5, 0, 0, -65491, 0, 0, 65531, 0, 0, 45, 0, 0, 131067, 0, 0, 65581, 0, 0, 196603, 0, 0, 131092, 0, 0, 131117, 0, 0, 262139, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196653, 0, 0, 327675, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262189, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327725, 0, 0, 393238, 0, 0, 393261, 0, 0, 458762, 0, 0, 458763, 0, 0, 458774, 0, 0, 458797, 0, 0, 524310, 0, 0, 524333, 0, 0, 589846, 0, 0, 589869, 0, 0, 655382, 0, 0, 655405, 0, 0, 720918, 0, 0, 720941, 0, 0, 786454, 0, 0, 786477, 0, 0, 851990, 0, 0, 852013, 0, 0, 917526, 0, 0, 917549, 0, 0, 983062, 0, 0, 983085, 0, 0, 1048598, 0, 0, 1048621, 0, 0, 1114134, 0, 0, 1114157, 0, 0, 1179670, 0, 0, 1179693, 0, 0, 1245206, 0, 0, 1245229, 0, 0, 1310742, 0, 0, 1310765, 0, 0, 1376278, 0, 0, 1376301, 0, 0, 1441814, 0, 0, 1441837, 0, 0, 1507350, 0, 0, 1507373, 0, 0, 1572886, 0, 0, 1572896, 0, 0, 1572897, 0, 0, 1572898, 0, 0, 1572899, 0, 0, 1572909, 0, 0, 1638422, 0, 0, 1638436, 0, 0, 1638437, 0, 0, 1638438, 0, 0, 1638439, 0, 0, 1638440, 0, 0, 1638441, 0, 0, 1638442, 0, 0, 1638443, 0, 0, 1638444, 0, 0, 1638445, 0, 0, 1703958, 0, 0, 1703959, 0, 0, 1703960, 0, 0, 1703961, 0, 0, 1703962, 0, 0, 1703963, 0, 0, 1703964, 0, 0, 1703965, 0, 0, 1703966, 0, 0 )

[node name="TileMap4" type="TileMap" parent="."]
light_mask = 3
tile_set = ExtResource( 1 )
cell_size = Vector2( 80, 80 )
show_collision = true
format = 1
tile_data = PoolIntArray( -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -65541, 0, 0, -131067, 0, 0, -5, 0, 0, -65531, 0, 0, 65531, 0, 0, 5, 0, 0, 131067, 0, 0, 65541, 0, 0, 196603, 0, 0, 131077, 0, 0, 262139, 0, 0, 196613, 0, 0, 327675, 0, 0, 262149, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0 )

[node name="Portal" parent="." instance=ExtResource( 3 )]
position = Vector2( 3253, 2015 )
monitorable = true
path_to_scene = "res://src/Levels/Hub.tscn"

[node name="Seta" type="Sprite" parent="."]
visible = false
position = Vector2( 778, 296 )
scale = Vector2( 0.185, 0.199167 )
texture = ExtResource( 4 )

[node name="Seta2" type="Sprite" parent="."]
visible = false
position = Vector2( 1942, 265 )
rotation = 1.57079
scale = Vector2( 0.185, 0.199167 )
texture = ExtResource( 4 )

[node name="Seta3" type="Sprite" parent="."]
visible = false
position = Vector2( 2034, 1807 )
scale = Vector2( 0.185, 0.199167 )
texture = ExtResource( 4 )

[node name="Seta4" type="Sprite" parent="."]
visible = false
position = Vector2( 156, 268 )
scale = Vector2( 0.185, 0.199167 )
texture = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 219, 400 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
autoplay = true
